--- a/wp-content/themes/testarticle/css/style.css
+++ b/wp-content/themes/testarticle/css/style.css
@@ -1023,12 +1023,12 @@ center{
 }
 
 .col-md-3 .celeb figure.thumb img{
-    height: 165px;
+    height: 210px;
     width: 100%;
 }
 
 .col-md-2 .celeb figure.thumb img{
-    height: 105px;
+    height: 130px;
     width: 100%;
 }
 
@@ -1041,6 +1041,8 @@ center{
     left: -40%;
     top: 15px;
     width: 100%;  
+    padding: 10px 7px !important;
+    font-size: 15px;
 }
 .celeb span.badge:last-child {
     display: block;
